svg logo clipping fix

--- a/css/myth/sections.css
+++ b/css/myth/sections.css
@@ -85,6 +85,11 @@ svg.main-logo {
   svg.main-logo use {
     fill: var(--red);
   }
+  #ml {
+    padding: 1em;
+    height: 20em;
+    background: red;
+  }
 svg path {
   fill: inherit;
 }
